# Cxx

./: .clang-format  .gitignore  .markdownlint.jsonc  CMakeLists.txt  CMakePresets.json  README.md  References.md
CMake/: MessageLog.cmake
Includes/: ExtensionMethods.hpp  Optional.hpp  Reference.hpp  SemanticValue.hpp  ServiceLocator.hpp
Includes/Cxx/: Algorithms.hpp  CompilerFeature.hpp  Concepts.hpp  ContainerTraits.hpp  DetectionIdiom.hpp  ExtensionMethods.hpp  FunctionTraits.hpp  Generator.hpp  IteratorTraits.hpp  Optional.hpp  Platform.hpp  Reference.hpp  SemanticValue.hpp  SemiRegularBox.hpp  SemiregularBox.hpp  String.hpp  TypeTraits.hpp  Utility.hpp
Includes/Cxx/Coroutines/: Future.hpp  Generator.hpp
Includes/Cxx/Coroutines/Details/: GeneratorImpl.tcc  GeneratorIterator.tcc
Includes/Cxx/Coroutines/Implementations/: GeneratorPromise.tcc
Includes/Cxx/DesignPatterns/: CuriouslyRecurringTemplatePattern.hpp  InputIterator.hpp  OutputIterator.hpp  OutputIteratorAdapter.hpp  ServiceLocator.hpp
Includes/Cxx/Details/: AlgorithmImpl.hpp  Optional.hpp
Includes/Cxx/Exceptions/: IOException.hpp  UnstableIteratorException.hpp
Includes/Cxx/Implementations/: Algorithms.tcc  Utility.tcc
Includes/Details/: Optional.hpp  Reference.hpp  TypeTraits.hpp
Sources/: ServiceLocator.cpp
Sources/Cxx/: Algorithms.cpp  String.cpp  Utility.cpp
Sources/Cxx/DesignPatterns/: ServiceLocator.cpp
Tests/: CMakeLists.txt  CoroutinesTests.cpp  DeduceThisTests.cpp  DetectionIdiomTests.cpp  ExtensionMethodTests.cpp  FunctionTraitsTests.cpp  GeneratorTests.cpp  InputIteratorTests.cpp  LanguageFeatures.cpp  LibraryFeatures.cpp  MainTests.cpp  MultidimensionalSubscript.cpp  MultidimensionalSubscriptTests.cpp  OptionalTests.cpp  OutputIteratorAdapterTests.cpp  OutputIteratorTests.cpp  ServiceLocatorTests.cpp  TypeTraitsTests.cpp
Tests/Sources/: AlgorithmsTests.cpp  CoroutinesTests.cpp  DeduceThisTests.cpp  DetectionIdiomTests.cpp  ExtensionMethodTests.cpp  FunctionTraitsTests.cpp  GeneratorTests.cpp  LanguageFeaturesTests.cpp  LibraryFeaturesTests.cpp  MainTests.cpp  OptionalTests.cpp  OutputIteratorTests.cpp  ReferenceTests.cpp  ServiceLocatorTests.cpp  StandardLibraries.cpp  StandardLibrariesTests.cpp  TypeTraitsTests.cpp
